[package]
name = "buttonuimainbevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = ["CssStyleDeclaration", "Document", "HtmlCanvasElement", "Window"]
